--- a/package.json
+++ b/package.json
@@ -25,19 +25,25 @@
         "dotenv": "^16.0.0",
         "express": "^4.18.1",
         "express-rate-limit": "^6.7.0",
+        "fluent-ffmpeg": "^2.1.2",
         "flutterwave-node-v3": "^1.1.6",
+        "gtts": "^0.2.1",
         "http-status": "^1.5.1",
         "https": "^1.0.0",
         "jsonwebtoken": "^8.5.1",
+        "memorystream": "^0.3.1",
         "moment": "^2.29.3",
         "multer": "^1.4.5-lts.1",
         "mysql": "^2.18.1",
+        "node-cache": "^5.1.2",
         "nodemailer": "^6.7.7",
         "rimraf": "^3.0.2",
         "rxdb": "^14.17.1",
         "sendmail": "^1.6.1",
         "serve-static": "^1.15.0",
         "socket.io": "^4.5.1",
-        "ua-parser-js": "^1.0.35"
+        "socket.io-client": "^4.7.2",
+        "ua-parser-js": "^1.0.35",
+        "wrtc": "^0.4.7"
     }
 }
