--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
         "serve-static": "^1.15.0",
         "socket.io": "^4.5.1",
         "socket.io-client": "^4.7.2",
-        "ua-parser-js": "^1.0.35",
-        "wrtc": "^0.4.7"
+        "ua-parser-js": "^1.0.35"
     }
 }
