--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "axios": "^1.6.2",
         "jest": "^28.1.3",
-        "nodemon": "^2.0.16"
+        "nodemon": "^2.0.16",
+        "socket.io-client": "^4.7.2"
     },
     "dependencies": {
-        "axios": "^1.4.0",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.0",
         "content-disposition": "^0.5.4",
@@ -43,7 +44,6 @@
         "sendmail": "^1.6.1",
         "serve-static": "^1.15.0",
         "socket.io": "^4.5.1",
-        "socket.io-client": "^4.7.2",
         "ua-parser-js": "^1.0.35"
     }
 }
